--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,6 @@ body {
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2;
+  color: #525252;
 }
