--- a/src/components/authForm/AuthForm.module.css
+++ b/src/components/authForm/AuthForm.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  overflow-y: hidden;
 }
 
 .image {
@@ -18,7 +19,6 @@
 }
 
 .logoContainer {
-  width: 57rem;
   margin-bottom: 5.5rem;
   display: flex;
   align-items: center;
@@ -40,8 +40,9 @@
 }
 
 .formContainer {
-  width: calc(57rem - 18rem);
-  height: 56rem;
+  max-width: calc(57rem - 18rem);
+  width: 52%;
+  height: 55rem;
   background-color: #fff;
   border-radius: 0.8rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -52,10 +53,14 @@
   padding-right: 9rem;
 }
 
+.form {
+  width: 100%;
+}
+
 .inputContainer {
   display: flex;
   flex-direction: column;
-  width: 38rem;
+  width: 100%;
 }
 
 .inputContainer label {
