--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -16,3 +16,9 @@
   text-transform: none;
   font-family: 'Nunito', sans-serif;
 }
+
+@media (max-width: 32em) {
+  .categoriesContainer {
+    width: 95%;
+  }
+}
