--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -43,3 +43,13 @@
   background-color: #094e78;
   color: #fff;
 }
+
+@media (max-width: 32em) {
+  .newAdvertText {
+    display: none;
+  }
+
+  .headerElements {
+    width: 95%;
+  }
+}
