--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -1,12 +1,19 @@
 .productsContainer {
   width: 77.1%;
   margin: 0 auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 28rem);
   justify-content: center;
-  flex-wrap: wrap;
+  align-content: center;
   gap: 2rem;
   padding-bottom: 16rem;
   padding-top: 3rem;
+}
+
+@media (max-width: 90em) {
+  .productsContainer {
+    grid-template-columns: repeat(auto-fill, 26rem);
+  }
 }
 
 @media (max-width: 64em) {
@@ -15,8 +22,15 @@
   }
 }
 
+@media (max-width: 43em) {
+  .productsContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (max-width: 32em) {
   .productsContainer {
     width: 95%;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
