add functionality of creating new product

--- a/src/components/newProductForm/NewProductForm.module.css
+++ b/src/components/newProductForm/NewProductForm.module.css
@@ -237,6 +237,23 @@ input[type='number'] {
   color: #fff;
 }
 
+.loadingContainer {
+  background-color: rgba(75, 156, 226, 0.6);
+  margin: 0 auto;
+  margin-top: 3rem;
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.8rem;
+}
+
+.doneText {
+  text-align: center;
+  margin-top: 6rem;
+}
+
 @media (max-width: 65em) {
   .newProductFormContainer {
     flex-direction: column;
