--- a/src/components/popups/OfferPopup.module.css
+++ b/src/components/popups/OfferPopup.module.css
@@ -145,3 +145,15 @@
   font-size: 1.8rem;
   color: #99a0a7;
 }
+
+.loadingContainer {
+  background-color: rgba(75, 156, 226, 0.6);
+  margin: 0 auto;
+  margin-top: 3rem;
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.8rem;
+}
