--- a/src/components/offers/Offers.module.css
+++ b/src/components/offers/Offers.module.css
@@ -89,10 +89,11 @@
 }
 
 .buttonsContainer {
+  width: 30%;
   margin-right: 3rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 1rem;
 }
 
@@ -102,6 +103,7 @@
   border: none;
   border-radius: 0.8rem;
   color: #ffffff;
+  font-size: 1.5rem;
   font-family: inherit;
   cursor: pointer;
   transition: all 0.3s;
@@ -136,6 +138,8 @@
 .rejectedText {
   font-size: 1.5rem;
   margin-right: 3rem;
+  width: 30%;
+  text-align: end;
 }
 
 .pendingText {
@@ -186,9 +190,3 @@
     width: 100%;
   }
 }
-
-/* @media (max-width: 32em) {
-  .offersContainer {
-    width: 95%;
-  }
-} */
