--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -60,15 +60,32 @@
 .priceTop,
 .priceBottom {
   margin-top: 3rem;
-  margin-bottom: 3rem;
 }
 
 .priceTop {
   display: none;
 }
 
+.recentOfferText {
+  width: 20rem;
+  height: 2rem;
+  background-color: #f2f2f2;
+  border-radius: 0.8rem;
+  padding: 0.8rem 1rem;
+  font-size: 1.5rem;
+  color: #b1b1b1;
+  display: flex;
+  align-items: center;
+}
+
+.recentOfferText strong {
+  color: #525252;
+  font-weight: bold;
+}
+
 .buttonsContainer {
   width: 47rem;
+  margin-top: 3rem;
   margin-bottom: 3rem;
   display: flex;
   align-items: center;
@@ -134,6 +151,25 @@
   align-items: center;
   justify-content: center;
   border-radius: 0.8rem;
+}
+
+.alert {
+  position: fixed;
+  top: 9rem;
+  right: 1.1rem;
+  width: 32rem;
+  height: 6rem;
+  border-radius: 0.8rem;
+  background-color: #f1fff0;
+  color: #46af32;
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  display: flex;
+  align-items: center;
+  padding-left: 1.2rem;
 }
 
 @media (max-width: 84.375em) {
@@ -217,6 +253,7 @@
   }
 
   .priceTop {
+    display: block;
     margin-top: 1rem !important;
     margin-bottom: 1rem;
   }
