--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -27,6 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 3.8rem;
   gap: 0.5rem;
   padding: 1rem 2rem;
   color: #4b9ce2;
